--- a/style.css
+++ b/style.css
@@ -18,6 +18,7 @@
 	border-top: 10px solid #000000;
 	border-left: 10px solid #000000;
 	margin: 0 20px;
+	font-size: 20px;
 }
 .text{
 	text-align: center;
