--- a/style.css
+++ b/style.css
@@ -17,14 +17,15 @@
 	border-bottom: 10px ridge #4CDEF5;
 	border-top: 10px solid #000000;
 	border-left: 10px solid #000000;
-	margin: 0 20px;
-	font-size: 20px;
+	margin: 10px 20px;
+	font-size: 50px;
 }
 .text{
 	text-align: center;
 	color: white;
 	font-size: 20px;
 	margin: 0 100px;
+	padding-top: 30px;
 }
 .jasa{
 	text-align: center;
@@ -66,6 +67,7 @@
 	border-top: 10px solid #000000;
 	border-left: 10px solid #000000;
 	margin: 0 20px;
+	font-size: 50px;
   }
   .text{
 	text-align: center;
@@ -91,6 +93,7 @@ margin: 5px;
 	border-top: 10px solid #000000;
 	border-left: 10px solid #000000;
 	margin: 0 20px;
+	font-size: 30px;
   }
   .text{
 	text-align: center;
