--- a/style.css
+++ b/style.css
@@ -67,7 +67,7 @@
 	border-top: 10px solid #000000;
 	border-left: 10px solid #000000;
 	margin: 0 20px;
-	font-size: 100px;
+	font-size: 50%;
   }
   .text{
 	text-align: center;
