--- a/style.css
+++ b/style.css
@@ -8,6 +8,7 @@
 	height: 70px;
 	text-align: center;
 	padding-bottom: 10px;
+	font-size: 30px;
 
 }
 .l h1{
@@ -18,7 +19,7 @@
 	border-top: 10px solid #000000;
 	border-left: 10px solid #000000;
 	margin: 10px 20px;
-	font-size: 50px;
+	
 }
 .text{
 	text-align: center;
@@ -58,17 +59,15 @@
   .container{
 	width: auto;
   }
-  
-  .l h1{
-	color: #88BBD6;
-	font-family: cursive;
-	border-right: 10px ridge #4CDEF5;
-	border-bottom: 10px ridge #4CDEF5;
-	border-top: 10px solid #000000;
-	border-left: 10px solid #000000;
-	margin: 0 20px;
-	font-size: 50%;
-  }
+
+
+.Logo{
+	height: 70px;
+	text-align: center;
+	padding-bottom: 10px;
+	font-size: 30px;
+
+}
   .text{
 	text-align: center;
 	color: white;
